--- a/.github/workflows/dime-tag-promote.yml
+++ b/.github/workflows/dime-tag-promote.yml
@@ -29,7 +29,7 @@ jobs:
           CURRENT=${{ github.sha }}
           TAG=${GITHUB_REF#refs/*/}
 
-          yum install -y jq
+          apt install -y jq
           MANIFEST=$(aws ecr batch-get-image --repository-name $REPOSITORY --image-ids imageTag=$CURRENT --output json | jq --raw-output '.images[0].imageManifest')
           aws ecr batch-delete-image --repository-name $REPOSITORY --image-ids imageTag=$TAG | jq -r .
           aws ecr put-image --repository-name $REPOSITORY --image-tag $TAG --image-manifest "$MANIFEST" | jq -r .
