--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -127,3 +127,13 @@ jobs:
           application_name: ${{ inputs.application_name }}
           slack_channel: ${{ inputs.slack_channel }}
           slack_webhook: ${{ secrets.slack_webhook }}
+
+  mobsfscan:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v2
+      - name: mobsfscan
+        uses: MobSF/mobsfscan@main
+        with:
+          args: '. --json'
