--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -136,4 +136,8 @@ jobs:
       - name: mobsfscan
         uses: MobSF/mobsfscan@main
         with:
-          args: '. --json'
+          args: '. --sarif --output results.sarif || true'
+      - name: Upload mobsfscan report
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          sarif_file: results.sarif
