run deploy when migration skipped

--- a/.github/workflows/dime-service-deploy.yml
+++ b/.github/workflows/dime-service-deploy.yml
@@ -90,6 +90,7 @@ jobs:
   deploy:
     name: Deploy applicaton from main branch
     runs-on: [self-hosted, linux, deployment, main]
+    if: ${{ (!inputs.migration) || (inputs.migration && success()) }}
     needs:
       - migration
     environment:
