--- a/deploy-app/action.yml
+++ b/deploy-app/action.yml
@@ -50,7 +50,7 @@ runs:
         git clone https://github.com/kkp-dfs/dime-helm.git
         cd dime-helm
         git fetch
-        git reset ${{ inputs.helm_ref }} --hard
+        git checkout ${{ inputs.helm_ref }}
     - name: Setup kubernetes context
       shell: bash
       env:
