--- a/.github/workflows/dime-service-deploy.yml
+++ b/.github/workflows/dime-service-deploy.yml
@@ -80,6 +80,8 @@ jobs:
       name: ${{ inputs.environment }}
     container:
       image: public.ecr.aws/c2u4x1k5/ubuntu:21.04
+      volumes:
+        - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - name: Migrate database
         uses: kkp-dfs/dime-github-actions-workflows/db-migration@main
@@ -101,6 +103,8 @@ jobs:
       name: ${{ inputs.environment }}
     container:
       image: public.ecr.aws/c2u4x1k5/ubuntu:21.04
+      volumes:
+        - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
       - uses: kkp-dfs/dime-github-actions-workflows/common@main
         with:
