--- a/.github/workflows/dime-service-deploy.yml
+++ b/.github/workflows/dime-service-deploy.yml
@@ -102,7 +102,7 @@ jobs:
     environment:
       name: ${{ inputs.environment }}
     container:
-      image: public.ecr.aws/c2u4x1k5/ubuntu:21.04
+      image: alpine/helm:3.8.1
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
     steps:
