--- a/common/action.yml
+++ b/common/action.yml
@@ -10,7 +10,7 @@ runs:
   using: composite
   steps:
     - name: Create .netrc file
-      shell: bash
+      shell: sh
       run: |
         cat <<EOF > .netrc
         machine github.com
