--- a/lang-setup/action.yml
+++ b/lang-setup/action.yml
@@ -25,6 +25,10 @@ inputs:
     description: Version of node
     required: false
     default: '16'
+  flutter_version:
+    description: Version of flutter
+    required: false
+    default: '2.10.3'
   gh_access_token:
     description: GitHub access token
     required: true
@@ -91,6 +95,8 @@ runs:
       if: ${{ inputs.language == 'flutter' }}
       uses: subosito/flutter-action@v2
       with:
+        flutter-version: ${{ inputs.flutter_version }}
+        channel: 'stable'
         cache: true
     - name: Cache flutter package
       if: ${{ inputs.language == 'flutter' }}
