--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -110,6 +110,7 @@ jobs:
           export SIGN_IN_RSA_PUBLIC_KEY=$(echo $DATA | jq -r ".data.data.SIGN_IN_RSA_PUBLIC_KEY")
           export PATH=/opt/flutter/bin:$PATH
 
+          apt-get install -y gettext-base
           envsubst < environment_secret_template.yaml > environment_secret_sit.yaml
           make gen-config-sit
       - name: Run unit tests
