--- a/.github/workflows/dime-service-deploy.yml
+++ b/.github/workflows/dime-service-deploy.yml
@@ -135,7 +135,7 @@ jobs:
           --set "source.password=x-oauth-basic" \
           --set "destination.cluster=dime-${{ inputs.environment }}" \
           --set "destination.namespace=${{ inputs.namespace }}" \
-          --set "application.version=revise-corporate-web" \
+          --set "application.version=staticfile" \
           --set "application.values.virtualService.hosts={$ENDPOINTS}" \
           $IMAGE_SETS
       - id: success_message
