--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -60,7 +60,7 @@ jobs:
   analyze:
     name: Run analyze
     needs: setup
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, main]
     continue-on-error: true
     steps:
       - name: Setup flutter
