--- a/unit-test/action.yml
+++ b/unit-test/action.yml
@@ -42,7 +42,11 @@ runs:
     - name: Run flutter unit test
       if: ${{ inputs.language == 'flutter' }}
       shell: bash
-      run: make test
+      run: |
+        sh scripts/generate_dart_isolate_testing.sh
+        echo "FLUTTER TESTING"
+        ls -l test/isolate
+        flutter test --coverage ./test/coverage_helper_test.dart
 
     - id: fail_message
       if: ${{ failure() }}
