--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -108,7 +108,7 @@ on:
 jobs:
   setup:
     name: Install dependencies and keep caches
-    runs-on: [self-hosted, linux, main]
+    runs-on: [self-hosted, linux, main, deployment]
     outputs:
       ecr_token: ${{ steps.ecr.outputs.token }}
       ecr_repository: ${{ steps.ecr.outputs.repository }}
@@ -184,7 +184,7 @@ jobs:
     name: Run unit testing
     if: ${{ inputs.code_lang == 'golang' }}
     needs: setup
-    runs-on: [self-hosted, linux, main]
+    runs-on: [self-hosted, linux, main, deployment]
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
       credentials:
@@ -216,7 +216,7 @@ jobs:
     name: Run integration test
     if: ${{ inputs.code_lang == 'golang' }}
     needs: setup
-    runs-on: [self-hosted, linux, sit]
+    runs-on: [self-hosted, linux, sit, deployment]
     continue-on-error: true
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
@@ -255,7 +255,7 @@ jobs:
       - lint
       - unit-test
       - integration-test
-    runs-on: [self-hosted, linux,  main]
+    runs-on: [self-hosted, linux,  main, deployment]
     if: ${{ (inputs.code_lang == 'node' && needs.lint.result == 'success') || success() }}
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
