run dime-app unit-test on mac mini

--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -76,7 +76,7 @@ jobs:
 
   unit-test:
     name: Run unit testing
-    runs-on: [self-hosted, linux, main, deployment]
+    runs-on: [self-hosted, fastlane]
     steps:
       - name: Setup flutter
         uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
