run flutter unit test on fargate

--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -76,7 +76,7 @@ jobs:
 
   unit-test:
     name: Run unit testing
-    runs-on: [self-hosted, flutter]
+    runs-on: [self-hosted, flutter-action-runner]
     continue-on-error: true
     steps:
       - name: Setup flutter
