set timeout for flutter unit test step

--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -107,6 +107,7 @@ jobs:
           ./envsubst < environment_secret_template.yaml > environment_secret_sit.yaml
           make gen-config-sit
       - name: Run unit tests
+        timeout-minutes: 360
         uses: kkp-dfs/dime-github-actions-workflows/unit-test@main
         with:
           language: flutter
