--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -79,7 +79,7 @@ jobs:
     runs-on: [self-hosted, flutter-action-runner]
     steps:
       - name: Setup flutter
-        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@new-runner
+        uses: kkp-dfs/dime-github-actions-workflows/lang-setup@main
         with:
           language: flutter
           repository: ${{ inputs.repository }}
