--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -114,6 +114,7 @@ jobs:
           application_name: ${{ inputs.application_name }}
           slack_channel: ${{ inputs.slack_channel }}
           slack_webhook: ${{ secrets.slack_webhook }}
+          coverage_file: coverage/lcov.info
 
   mobsfscan:
     runs-on: ubuntu-latest
